[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/singletons/CharactersGetter.gd" type="Script" id=1]


[node name="CharactersGetter" type="HTTPRequest"]
script = ExtResource( 1 )

[node name="CharactersDeleter" type="HTTPRequest" parent="."]

[node name="CharactersUpdater" type="HTTPRequest" parent="."]

[node name="CharactersInserter" type="HTTPRequest" parent="."]
[connection signal="request_completed" from="." to="." method="_on_get_request_completed"]
